objects/agf__ADM_Investigation_Exception__c.object
<CustomObject>
    <fields>
        <fullName>agf__Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The person making the decision - varies by status</inlineHelpText>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Investigation_Exceptions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Decision_Explanation__c</fullName>
        <description>Should be filled out by the Assigned To</description>
        <inlineHelpText>Should be filled out by the Assigned To</inlineHelpText>
        <label>Decision Explanation</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>agf__Investigation__c</fullName>
        <label>Investigation</label>
        <referenceTo>agf__ADM_Work__c</referenceTo>
        <relationshipName>Investigation_Exceptions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>agf__Reason_for_Request__c</fullName>
        <description>Should be filled out by the Requestor</description>
        <inlineHelpText>Should be filled out by the Requestor</inlineHelpText>
        <label>Reason for Request</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>agf__Requestor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Person who created the exception. Value entered automatically upon saving the record.</description>
        <inlineHelpText>Person who created the exception. Value entered automatically upon saving the record.</inlineHelpText>
        <label>Requestor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Investigation_Exceptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Under Review</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parent Investigation Resolved</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>agf__Type__c</fullName>
        <inlineHelpText>Check the Help For this page link for more examples</inlineHelpText>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Severity level upgrade</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>More status updates/assigned resources</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>During business hours request for after hours resources/communication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>After hours triage/diagnosis of Sev 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>After hours request for after hours resources</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acknowledgment of a Severity 4 Investigation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SLA violated by T&amp;P</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SLA violated by Support</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Exception Request</label>
    <listViews>
        <fullName>agf__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>IE-{00000}</displayFormat>
        <label>Investigation Exception Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exception Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>agf__Dec_Explanation_Empty_Status_Approved</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISPICKVAL(agf__Status__c, &quot;Approved&quot;), 
agf__Decision_Explanation__c = &quot;&quot;)</errorConditionFormula>
        <errorDisplayField>agf__Decision_Explanation__c</errorDisplayField>
        <errorMessage>Please provide a decision explanation when setting the status to &apos;Approved&apos;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>agf__Dec_Explanation_Empty_With_Status_Reject</fullName>
        <active>true</active>
        <errorConditionFormula>AND(CASE( agf__Status__c,
&quot;Rejected&quot;, 1,
0) = 1, agf__Decision_Explanation__c = &quot;&quot;)</errorConditionFormula>
        <errorDisplayField>agf__Decision_Explanation__c</errorDisplayField>
        <errorMessage>Please provide a decision explanation when setting the status to &apos;Rejected&apos;.</errorMessage>
    </validationRules>
</CustomObject>